{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 358,
  "lineage": "d438f559-3f24-c18d-25d1-fdf0b533852a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lamp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:356031655355:loadbalancer/app/lamp-lb-tf/1987585dfb3730e2",
            "arn_suffix": "app/lamp-lb-tf/1987585dfb3730e2",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lamp-lb-tf-568194406.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:356031655355:loadbalancer/app/lamp-lb-tf/1987585dfb3730e2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lamp-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-020c7c4b54347182d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-035c90d72fb6e65dc"
              },
              {
                "subnet_id": "subnet-0a7993e3c62eda6f1"
              },
              {
                "subnet_id": "subnet-0b2abf6619b74b83b"
              },
              {
                "subnet_id": "subnet-0e59c8e8ad1b63013"
              }
            ],
            "subnets": [
              "subnet-035c90d72fb6e65dc",
              "subnet-0a7993e3c62eda6f1",
              "subnet-0b2abf6619b74b83b",
              "subnet-0e59c8e8ad1b63013"
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Project": "lamp"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "lamp"
            },
            "vpc_id": "vpc-04c3fbcceff1f45b7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lamp_sg",
            "module.lamp-vpc.aws_subnet.public_subnets",
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lamp_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:356031655355:listener/app/lamp-lb-tf/1987585dfb3730e2/be1b62e56ebdefaf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:356031655355:listener/app/lamp-lb-tf/1987585dfb3730e2/be1b62e56ebdefaf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:356031655355:loadbalancer/app/lamp-lb-tf/1987585dfb3730e2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lamp_alb",
            "aws_security_group.lamp_sg",
            "module.lamp-vpc.aws_subnet.public_subnets",
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lamp_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:356031655355:targetgroup/lamp-target-group/305f93f29e27ae66",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:356031655355:listener-rule/app/lamp-lb-tf/1987585dfb3730e2/be1b62e56ebdefaf/270b9f230435f30c",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "google.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:356031655355:listener-rule/app/lamp-lb-tf/1987585dfb3730e2/be1b62e56ebdefaf/270b9f230435f30c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:356031655355:listener/app/lamp-lb-tf/1987585dfb3730e2/be1b62e56ebdefaf",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lamp_alb",
            "aws_lb_listener.lamp_listener",
            "aws_lb_target_group.lamp_target_group",
            "aws_security_group.lamp_sg",
            "module.lamp-vpc.aws_subnet.public_subnets",
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lamp_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:356031655355:targetgroup/lamp-target-group/305f93f29e27ae66",
            "arn_suffix": "targetgroup/lamp-target-group/305f93f29e27ae66",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:356031655355:targetgroup/lamp-target-group/305f93f29e27ae66",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lamp-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04c3fbcceff1f45b7"
          },
          "dependencies": [
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lamp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:security-group/sg-020c7c4b54347182d",
            "description": "Public sg to access the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020c7c4b54347182d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "356031655355",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "",
              "ManagedBy": "terraform",
              "Name": "my-lamp-sg",
              "Project": "lamp"
            },
            "tags_all": {
              "Environment": "",
              "ManagedBy": "terraform",
              "Name": "my-lamp-sg",
              "Project": "lamp"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c3fbcceff1f45b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lamp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:internet-gateway/igw-0a14b6de4489c2810",
            "id": "igw-0a14b6de4489c2810",
            "owner_id": "356031655355",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "my-lamp-igw",
              "Project": "lamp"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "my-lamp-igw",
              "Project": "lamp"
            },
            "vpc_id": "vpc-04c3fbcceff1f45b7"
          },
          "dependencies": [
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a14b6de4489c2810",
            "id": "r-rtb-03da96f618b4e24091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03da96f618b4e2409",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-vpc.aws_internet_gateway.lamp_igw",
            "module.lamp-vpc.aws_route_table.lamp_rt",
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lamp_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:route-table/rtb-03da96f618b4e2409",
            "id": "rtb-03da96f618b4e2409",
            "owner_id": "356031655355",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "my-lamp-rt",
              "Project": "lamp"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "my-lamp-rt",
              "Project": "lamp"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c3fbcceff1f45b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4863d1d101b5407",
            "route_table_id": "rtb-03da96f618b4e2409",
            "subnet_id": "subnet-0a7993e3c62eda6f1"
          },
          "dependencies": [
            "module.lamp-vpc.aws_route_table.lamp_rt",
            "module.lamp-vpc.aws_subnet.public_subnets",
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        },
        {
          "index_key": "subnet_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b67680d589fc9e8",
            "route_table_id": "rtb-03da96f618b4e2409",
            "subnet_id": "subnet-0e59c8e8ad1b63013"
          },
          "dependencies": [
            "module.lamp-vpc.aws_route_table.lamp_rt",
            "module.lamp-vpc.aws_subnet.public_subnets",
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        },
        {
          "index_key": "subnet_c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8b13da5b7340d67",
            "route_table_id": "rtb-03da96f618b4e2409",
            "subnet_id": "subnet-035c90d72fb6e65dc"
          },
          "dependencies": [
            "module.lamp-vpc.aws_route_table.lamp_rt",
            "module.lamp-vpc.aws_subnet.public_subnets",
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        },
        {
          "index_key": "subnet_d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d4653631fe78060",
            "route_table_id": "rtb-03da96f618b4e2409",
            "subnet_id": "subnet-0b2abf6619b74b83b"
          },
          "dependencies": [
            "module.lamp-vpc.aws_route_table.lamp_rt",
            "module.lamp-vpc.aws_subnet.public_subnets",
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:subnet/subnet-0a7993e3c62eda6f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7993e3c62eda6f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356031655355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "us-east-1a",
              "Project": "lamp"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "us-east-1a",
              "Project": "lamp"
            },
            "vpc_id": "vpc-04c3fbcceff1f45b7"
          },
          "dependencies": [
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        },
        {
          "index_key": "subnet_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:subnet/subnet-0e59c8e8ad1b63013",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e59c8e8ad1b63013",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356031655355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "us-east-1b",
              "Project": "lamp"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "us-east-1b",
              "Project": "lamp"
            },
            "vpc_id": "vpc-04c3fbcceff1f45b7"
          },
          "dependencies": [
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        },
        {
          "index_key": "subnet_c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:subnet/subnet-035c90d72fb6e65dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.3.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035c90d72fb6e65dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356031655355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "us-east-1c",
              "Project": "lamp"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "us-east-1c",
              "Project": "lamp"
            },
            "vpc_id": "vpc-04c3fbcceff1f45b7"
          },
          "dependencies": [
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        },
        {
          "index_key": "subnet_d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:subnet/subnet-0b2abf6619b74b83b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.4.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2abf6619b74b83b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356031655355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "us-east-1d",
              "Project": "lamp"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "us-east-1d",
              "Project": "lamp"
            },
            "vpc_id": "vpc-04c3fbcceff1f45b7"
          },
          "dependencies": [
            "module.lamp-vpc.aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lamp-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lamp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:vpc/vpc-04c3fbcceff1f45b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a89c540a7b2772a8",
            "default_route_table_id": "rtb-027d1ff22b16db625",
            "default_security_group_id": "sg-0493607a39fc91d46",
            "dhcp_options_id": "dopt-09293ca0673bab044",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c3fbcceff1f45b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-027d1ff22b16db625",
            "owner_id": "356031655355",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "my-lamp-vpc",
              "Project": "lamp"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "my-lamp-vpc",
              "Project": "lamp"
            }
          }
        }
      ]
    }
  ]
}